[package]
name = "quizapp"
version = "0.1.0"
authors = ["Ian Wilson <iwilsonq@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"

[dependencies.rocket_contrib]
version = "0.4.1"
default-features = false
features = ["json", "serve"]